--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,14 @@
 # testing
 /coverage
 
+!*/index.html
+!*/myCss.css
+!*/animate.headline.css
+
 # production
 /build
-/public 
+/public
+
 
 # misc
 .DS_Store
