--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "scripts": {
     "start": "REACT_APP_API=http://localhost:8080 react-scripts start",
+    "tsconfig": "cp tsconfig.copy.json tsconfig.json",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
