servico de email, ajuste de cabeçalhos das componentes

--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/aws-sdk": "^2.7.0",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/jest": "^25.2.3",
     "@types/react": "^16.9.35",
+    "aws-sdk": "^2.709.0",
     "axios": "^0.19.2",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "gmail-send": "^1.8.10",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
@@ -22,7 +26,7 @@
     "typescript": "^3.9.3"
   },
   "scripts": {
-    "start": "REACT_APP_API=http://localhost:8080 react-scripts start",
+    "start": "REACT_APP_STATIC=https://bucket-meta.s3-sa-east-1.amazonaws.com/ REACT_APP_API=http://localhost:8080 react-scripts start",
     "server": "cp tsconfig.copy.json tsconfig.json; nodemon server.ts",
     "build": "react-scripts build",
     "test": "react-scripts test",
