--- a/package.json
+++ b/package.json
@@ -9,14 +9,24 @@
     "@types/aws-sdk": "^2.7.0",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
+    "@types/express-session": "^1.17.0",
     "@types/jest": "^25.2.3",
+    "@types/mongoose": "^5.7.30",
+    "@types/passport": "^1.0.3",
+    "@types/passport-google-oauth2": "^0.1.3",
+    "@types/passport-local": "^1.0.33",
     "@types/react": "^16.9.35",
     "aws-sdk": "^2.709.0",
     "axios": "^0.19.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "gmail-send": "^1.8.10",
+    "mongoose": "^5.9.22",
+    "passport": "^0.4.1",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-local": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
@@ -28,7 +38,7 @@
   "scripts": {
     "start": "REACT_APP_STATIC=https://bucket-meta.s3-sa-east-1.amazonaws.com/ REACT_APP_API=http://localhost:8080 react-scripts start",
     "server": "cp tsconfig.copy.json tsconfig.json; nodemon server.ts",
-    "build": "react-scripts build",
+    "build": "REACT_APP_STATIC=https://bucket-meta.s3-sa-east-1.amazonaws.com/ REACT_APP_API=http://localhost:8080  react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
